--- a/blogproject/templates/base.html
+++ b/blogproject/templates/base.html
@@ -45,17 +45,10 @@
 {% block contents %}
 
 {% endblock %}
-
-    <div class="container">
-      <nav>
-      <ul class="pagination">
-      <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-      <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-      <li class="active"><a href="#">2 <span class="sr-only">(current)</span></a></li>
-      <li class="active"><a href="#">3 <span class="sr-only">(current)</span></a></li>
-      <li class="active"><a href="#">4 <span class="sr-only">(current)</span></a></li>
-      </ul>
-      </nav>
+<div class="container">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-9/52532855_1328929153898834_5778838295874109440_o.png?_nc_cat=103&_nc_ht=scontent-icn1-1.xx&oh=3aef172a737b5e874e500f506fc55a2d&oe=5D13EAF2"></iframe>
     </div>
+  </div>
 </body>
 
