--- a/blogproject/templates/base.html
+++ b/blogproject/templates/base.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-black bg-black">
+   
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -20,6 +21,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'new' %}">글쓰기</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'cover' %}">cover</a>
+              </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
